--- a/motofinai/templates/pages/login.html
+++ b/motofinai/templates/pages/login.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 
-{% block title %}Sign in · MotofinAI{% endblock title %}
+{% block title %}Sign in · DC Financing Corporation{% endblock title %}
 
 {% block content %}
   <section class="mx-auto flex min-h-[60vh] w-full max-w-4xl items-center justify-center px-6 py-16">
