--- a/motofinai/templates/pages/payments/schedule_list.html
+++ b/motofinai/templates/pages/payments/schedule_list.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block title %}{{ page_title }} - MotofinAI{% endblock %}
+{% block title %}{{ page_title }} - DC Financing Corporation{% endblock %}
 
 {% block head_extras %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
